@@ -41,4 +41,10 @@ add_library(arch STATIC ${sources})
 
 if (UNIX)
     target_link_libraries(arch ${CMAKE_DL_LIBS} ${libs})
+
+    if (NOT APPLE)
+        find_package (Qt5 COMPONENTS DBus)
+        include_directories(${Qt5DBus_INCLUDE_DIRS})
+        target_link_libraries (arch Qt5::DBus)
+    endif()
 endif()
