@@ -2,11 +2,11 @@
  * synergy -- mouse and keyboard sharing utility
  * Copyright (C) 2012-2016 Symless Ltd.
  * Copyright (C) 2004 Chris Schoeneman
- * 
+ *
  * This package is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
  * found in the file LICENSE that should have accompanied this file.
- * 
+ *
  * This package is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
@@ -36,4 +36,12 @@ public:
     virtual std::string getLibsUsed(void) const;
 
     static std::string  runCommand(const std::string& cmd);
+
+#ifndef __APPLE__
+    enum class InhibitScreenServices {
+        kScreenSaver,
+        kSessionManager
+    };
+    static bool DBusInhibitScreenCall(InhibitScreenServices serviceID, bool state, std::string& error);
+#endif
 };
