@@ -251,6 +251,7 @@ MSWindowsScreen::enable()
 
     if (App::instance().argsBase().m_preventSleep) {
         ArchMiscWindows::addBusyState(ArchMiscWindows::kSYSTEM);
+        ArchMiscWindows::addBusyState(ArchMiscWindows::kDISPLAY);
     }
 }
 
@@ -270,6 +271,7 @@ MSWindowsScreen::disable()
     else {
         // allow the system to enter power saving mode
         ArchMiscWindows::removeBusyState(ArchMiscWindows::kSYSTEM);
+        ArchMiscWindows::removeBusyState(ArchMiscWindows::kDISPLAY);
     }
 
     // tell key state
